--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
     "express": "~3.4.7",
     "log4js": "~0.6.21",
     "jade": "~1.7.0"
+  },
+  "devDependencies": {
+    "gulp": "~3.8.8",
+    "gulp-concat": "~2.4.1",
+    "gulp-uglify": "~1.0.1",
+    "gulp-minify-css": "~0.3.11",
+    "del": "~0.1.3",
+    "browser-sync": "~1.5.8"
   }
 }
