--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "express": "~3.4.7",
     "log4js": "~0.6.21",
-    "jade": "~1.7.0"
+    "jade": "~1.7.0",
+    "node-uuid": "~1.4.2",
+    "mongoose": "~3.8.20"
   },
   "devDependencies": {
     "gulp": "~3.8.8",
