--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "socket.io": "~0.9.16"
   },
   "devDependencies": {
+    "browser-sync": "~1.5.8",
+    "del": "~0.1.3",
     "gulp": "~3.8.8",
     "gulp-concat": "~2.4.1",
-    "gulp-uglify": "~1.0.1",
     "gulp-minify-css": "~0.3.11",
-    "del": "~0.1.3",
-    "browser-sync": "~1.5.8"
+    "gulp-sourcemaps": "~1.6.0",
+    "gulp-uglify": "~1.0.1"
   }
 }
