--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "es6-promise": "^3.0.2",
     "express": "~3.4.7",
     "jade": "~1.7.0",
     "log4js": "~0.6.21",
     "mongoose": "~3.8.20",
     "node-uuid": "~1.4.2",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "browser-sync": "~1.5.8",
