--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "es6-promise": "^3.0.2",
     "express": "~3.4.7",
     "log4js": "~0.6.21",
     "mongoose": "~3.8.20",
@@ -16,9 +15,9 @@
     "twitter": "^1.2.5"
   },
   "devDependencies": {
-    "browser-sync": "~1.5.8",
+    "browser-sync": "^2.12.8",
     "del": "~0.1.3",
-    "gulp": "~3.8.8",
+    "gulp": "^3.9.1",
     "gulp-concat": "~2.4.1",
     "gulp-minify-css": "~0.3.11",
     "gulp-sourcemaps": "~1.6.0",
