--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "errorhandler": "^1.5.1",
     "es6-promise": "^3.0.2",
-    "express": "~3.4.7",
+    "express": "~4.17.1",
     "log4js": "~0.6.21",
     "mongoose": "~3.8.20",
     "node-uuid": "~1.4.2",
