--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "es6-promise": "^3.0.2",
     "express": "~4.17.1",
     "log4js": "~0.6.21",
-    "mongoose": "~3.8.20",
+    "mongoose": "^5.13.9",
     "node-uuid": "~1.4.2",
-    "pug": "^2.0.0-alpha8",
-    "socket.io": "~0.9.16",
+    "pug": "^3.0.2",
+    "socket.io": "^4.2.0",
     "twitter": "^1.2.5"
   },
   "devDependencies": {
     "browser-sync": "^2.12.8",
-    "del": "~0.1.3",
-    "gulp": "^3.9.1",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
     "gulp-concat": "~2.4.1",
     "gulp-minify-css": "~0.3.11",
     "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~1.0.1"
+    "gulp-uglify": "^1.5.4"
   }
 }
