すたンプを4種類追加。packageをいろいろ更新。

--- a/dest/log4js_configuration.json
+++ b/dest/log4js_configuration.json
@@ -1,27 +1,32 @@
 {
-    "appenders": [
-        { "type": "console" },
-        {
+    "appenders": {
+        "out": {
+            "type": "console"
+        },
+        "appLog": {
             "type": "file",
             "filename": "log/application.log",
             "maxLogSize": 1000000,
-            "backups": 50,
-            "category": ["appLog", "console"]
+            "backups": 50
         },
-        {
+        "accessLog": {
             "type": "file",
             "filename": "log/access.log",
             "maxLogSize": 1000000,
-            "backups": 50,
-            "category": ["accessLog"]
+            "backups": 50
         },
-        {
+        "twitterLog": {
             "type": "file",
             "filename": "log/twitter.log",
             "maxLogSize": 1000000,
-            "backups": 50,
-            "category": ["twitterLog"]
+            "backups": 50
         }
-    ],
+    },
+    "categories": {
+        "default":    { "appenders": ["out"],               "level": "info" },
+        "appLog":     { "appenders": ["out", "appLog"],     "level": "info" },
+        "accessLog":  { "appenders": ["out", "accessLog"],  "level": "info" },
+        "twitterLog": { "appenders": ["out", "twitterLog"], "level": "debug" }
+    },
     "replaceConsole": true
 }
