--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "errorhandler": "^1.5.1",
     "es6-promise": "^3.0.2",
     "express": "~4.17.1",
-    "log4js": "~0.6.21",
+    "log4js": "~6.4.4",
     "mongoose": "^5.13.9",
     "node-uuid": "~1.4.2",
     "pug": "^3.0.2",
@@ -18,12 +18,12 @@
     "twitter": "^1.2.5"
   },
   "devDependencies": {
-    "browser-sync": "^2.12.8",
+    "browser-sync": "^2.27.9",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-concat": "~2.4.1",
-    "gulp-minify-css": "~0.3.11",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^3.0.2"
   }
 }
