--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "compression": "^1.7.4",
     "errorhandler": "^1.5.1",
     "es6-promise": "^3.0.2",
-    "express": "~4.17.1",
+    "express": "^4.19.2",
     "log4js": "~6.4.4",
-    "mongoose": "^5.13.9",
-    "node-uuid": "~1.4.2",
+    "mongoose": "^8.5.1",
     "pug": "^3.0.2",
     "socket.io": "^4.2.0",
-    "twitter": "^1.2.5"
+    "twitter": "^1.1.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.27.9",
     "del": "^6.0.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-sourcemaps": "~1.6.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2"
   }
 }
